working version -- delete function to check

--- a/templates/delete_task.html
+++ b/templates/delete_task.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>New Task</title>
+    <title>Delete Task</title>
 </head>
 <body>
-
-    <h1>Insertion of the new task succeeded!</h1>
+<h3>You have deleted the task:</h3>
+<h2>{{ task[1] }}</h2>
 
 <p>Go back to the <a href="{{ url_for('index') }}">Project Page</a></p>
 
