--- a/templates/delete_task.html
+++ b/templates/delete_task.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h3>You have deleted the task:</h3>
-<h2>{{ task[1] }}</h2>
+<h2>{{ task }}</h2>
 
 <p>Go back to the <a href="{{ url_for('index') }}">Project Page</a></p>
 
